Model improvement again backend changes  v2